--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,7 +5,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
-    "esModuleInterop": true, // ✅ ต้องเปิดใช้งาน
+    "esModuleInterop": true, //  ต้องเปิดใช้งาน
     "resolveJsonModule": true
   }
 }
